--- a/index.html
+++ b/index.html
@@ -1,201 +1,105 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="SmartTechHub - Affordable Tech in Kenya. Buy laptops, accessories, and more.">
-    <title>SmartTechHub | Affordable Tech in Kenya</title>
+    <title>Naomi's First Website</title>
     <style>
         body {
-            background-color: #ffe0e0;
             font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 0;
-            padding: 0;
+            text-align: center; /* center everything */
+            background-color: #f9f9f9; /* light background */
+            padding: 50px;
         }
-
-        h1, h2 {
-            color: #c00000;
-            margin-top: 30px;
-        }
-
-        h3 {
-            color: #333;
+        img {
+            width: 300px;
+            border-radius: 20px; /* rounded corners */
+            box-shadow: 0 5px 15px rgba(0,0,0,0.3); /* shadow */
             margin-top: 20px;
         }
-
-        p {
+        h1 {
             color: #333;
+        }
+        p {
             font-size: 18px;
-            line-height: 1.6;
-            max-width: 800px;
-            margin: 10px auto;
+            color: #555;
         }
-
+        button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 16px;
+            border-radius: 10px;
+            border: none;
+            background-color: #ff6f61;
+            color: white;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #ff3b2e;
+        }
         a {
-            color: #0066cc;
+            display: inline-block;
+            margin-top: 15px;
             text-decoration: none;
+            color: #007bff;
         }
-
         a:hover {
             text-decoration: underline;
         }
-
-        button {
-            background-color: #28a745;
-            border: none;
-            padding: 12px 25px;
-            font-size: 16px;
-            cursor: pointer;
-            color: white;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        button:hover {
-            background-color: #ff9800;
-        }
-
-        img {
-            margin-top: 20px;
-            border-radius: 10px;
-            max-width: 100%;
-            height: auto;
-        }
-
-        .container {
-            padding: 40px 20px;
-        }
-
-        .section {
-            padding: 40px 20px;
-        }
-
-        .order-form {
-            background-color: white;
-            width: 350px;
-            max-width: 90%;
-            margin: 30px auto;
-            padding: 25px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-
-        input, textarea {
-            width: 90%;
-            padding: 10px;
-            margin: 8px 0;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-            font-size: 16px;
-        }
-
-        .features {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            gap: 20px;
-            margin-top: 30px;
-        }
-
-        .feature-box {
-            background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            width: 250px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-
-        footer {
+    .login-form {
             margin-top: 40px;
-            padding: 15px;
-            background-color: #333;
-            color: white;
+            display: inline-block;
+            text-align: left;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
         }
-
-        /* Responsive */
-        @media screen and (max-width: 768px) {
-            .features {
-                flex-direction: column;
-                align-items: center;
-            }
+        .login-form input {
+            display: block;
+            width: 250px;
+            margin-bottom: 15px;
+            padding: 10px;
+            border-radius: 8px;
+            border: 1px solid #ccc;
+        }
+        .login-form button {
+            width: 100%;
         }
     </style>
 </head>
 <body>
 
-    <!-- Hero Section -->
-    <div class="container">
-        <h1>Welcome to SmartTechHub!</h1>
-        <p>Your one-stop destination for affordable and high-quality tech products in Kenya. Explore our laptops, smartphones, accessories, and more — all at unbeatable prices.</p>
-        <button onclick="document.getElementById('order').scrollIntoView({ behavior: 'smooth' });">
-            Place Your Order Now
-        </button>
-        <br><br>
-        <img 
-            src="Tech-Convenience-Store-Dell-Latitude-5300-2-in-1-–-Intel-Core-i7-8665U-16GB-RAM-512GB-SSD-13-Inch-Full-HD-Touchscreen-–-Premium-Business-Laptop-03.jpg" 
-            alt="Dell Laptop"
-        >
-        <p>Visit <a href="https://smarttechhub.co.ke/" target="_blank">smarttechhub.co.ke</a> and enjoy the best tech deals in Kenya!</p>
-    </div>
+<h1>Hi! My name is Naomi Macharia</h1>
+<p>The below image is my beloved pet 🐶</p>
 
-    <!-- About Section -->
-    <div class="section">
-        <h2>About SmartTechHub</h2>
-        <p>SmartTechHub is dedicated to bringing you the latest technology products at prices that won't break the bank. We focus on quality, reliability, and excellent customer service, making tech shopping simple and enjoyable for everyone in Kenya.</p>
-    </div>
+<img src="Cute Chihuahua.webp" alt="Cute Chihuahua">
 
-    <!-- Featured Products Section -->
-    <div class="section">
-        <h2>Featured Products</h2>
-        <div class="features">
-            <div class="feature-box">
-                <h3>Dell Latitude 5300</h3>
-                <p>Powerful business laptop with Intel i7, 16GB RAM, 512GB SSD, and a Full HD touchscreen display.</p>
-            </div>
-            <div class="feature-box">
-                <h3>HP EliteBook x360</h3>
-                <p>Convertible laptop with touchscreen, long battery life, and premium design for professionals.</p>
-            </div>
-            <div class="feature-box">
-                <h3>JBL Noise-Cancelling Headphones</h3>
-                <p>Enjoy crystal-clear sound and comfort for your music and calls at unbeatable prices.</p>
-            </div>
-        </div>
-    </div>
+<p></p><button onclick="window.location.href='https://www.google.com'">Go to Google</button><p></p>
 
-    <!-- Why Choose Us Section -->
-    <div class="section">
-        <h2>Why Choose SmartTechHub?</h2>
-        <p>We combine quality products, affordable prices, and excellent customer support. With SmartTechHub, you get:</p>
-        <ul style="max-width: 600px; margin: 0 auto; text-align: left; font-size: 18px; line-height: 1.6;">
-            <li>Genuine and reliable products</li>
-            <li>Fast delivery across Kenya</li>
-            <li>Easy online ordering</li>
-            <li>Friendly customer service</li>
-        </ul>
-        <br>
-        <button onclick="document.getElementById('order').scrollIntoView({ behavior: 'smooth' });">
-            Order Your Tech Today
-        </button>
-    </div>
+<p>My pet's name is <strong>Arsen</strong>. He is a male Chihuahua, and I love him more than words can express. I bought Arsen when he was just a tiny puppy. The moment I held him in my hands, I knew he was going to be a very special part of my life. From the first day, he filled my home with energy, joy, and endless laughter. He has such a playful spirit and a personality much bigger than his small size!</p>
 
-    <!-- ORDER FORM -->
-    <div class="order-form" id="order">
-        <h2>Place Your Order</h2>
-        <form action="https://formspree.io/f/your-form-id" method="POST">
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="tel" name="phone" placeholder="Phone Number" required>
-            <input type="text" name="product" placeholder="Product Name" required>
-            <textarea name="message" placeholder="Your Message"></textarea>
-            <button type="submit">Submit Order</button>
-        </form>
-    </div>
+<p>Every morning, Arsen greets me with his tiny yaps and wagging tail. We go for walks together, play fetch in the garden, and cuddle on the couch while I sip my coffee. He has a curious nature and loves exploring every corner of the house. Even when he gets mischievous—like sneaking under the table or hiding his toys—his adorable face always melts my heart.</p>
 
-    <footer>
-        © 2026 SmartTechHub | Affordable Tech in Kenya
-    </footer>
+<p>Arsen has a favorite little blanket and a squeaky toy he carries everywhere. Watching him chase his toys and run around makes me laugh every single day. He’s also incredibly smart! He learned to sit, shake hands, and even roll over in just a few weeks. We have a special bond; he knows when I’m happy, when I’m sad, and always stays close to comfort me.</p>
+
+<p>I often take pictures of him to capture our precious moments, and I share them with friends who are always amazed at his cute expressions. Arsen is not just my pet; he’s my companion, my little buddy, and a true friend who makes every day brighter. I feel so lucky to have him in my life, and I will always care for him and love him endlessly. ❤️</p>
+
+<br>
+
+<div style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
+    <button onclick="window.location.href='https://mubaraktech.co.ke'">Visit MubarakTech</button>
+    <button onclick="window.location.href='https://www.google.com'">Go to Google</button>
+</div>
+
+<div class="login-form" style="margin-top: 40px;">
+    <h2>Login</h2>
+    <input type="text" id="username" placeholder="Username" required>
+    <input type="password" id="password" placeholder="Password" required>
+    <button onclick="login()">Login</button>
+</div>
+
+
+
+
 
 </body>
 </html>
-
